--- a/css/galleries.css
+++ b/css/galleries.css
@@ -94,7 +94,7 @@ i {
         right: auto
     }
     .juzhong {
-        display: inline-block;
+        display: block;
         line-height: 350px;
     }
 }
@@ -247,7 +247,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
         padding-top: 75px;
     }
     .juzhong {
-        display: inline-block;
+        display: block;
         line-height: 75px;
     }
 }
