--- a/css/galleries.css
+++ b/css/galleries.css
@@ -1,8 +1,3 @@
-.test {
-    float: left;
-    width: 25%;
-}
-
 .site-content {
     max-width: 90%;
     margin-left: auto;
@@ -53,11 +48,6 @@ ul:not(.browser-default) > li {
     list-style-type: none
 }
 
-.card {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2)
-}
-
 .hoverable {
     -webkit-transition: -webkit-box-shadow .25s;
     transition: -webkit-box-shadow .25s;
@@ -93,10 +83,6 @@ i {
         left: auto;
         right: auto
     }
-    .juzhong {
-        display: block;
-        line-height: 350px;
-    }
 }
 
 html {
@@ -124,20 +110,21 @@ html {
     }
 }
 
-.card {
+.waterfall {
+    column-count: 4;
+    column-gap: 1em;
+}
+
+.item {
     position: relative;
-    width: 100%;
-    height: 0px;
-    padding-bottom: 100%;
-    overflow: hidden;
-    margin: 0;
-    /*margin: .5rem 0 1rem 0;*/
+    margin: 0 0 1em 0;
     background-color: #fff;
-    -webkit-transition: -webkit-box-shadow .25s;
-    transition: -webkit-box-shadow .25s;
-    transition: box-shadow .25s;
-    transition: box-shadow .25s, -webkit-box-shadow .25s;
-    border-radius: 2px
+    border-radius: 2px;
+    break-inside: avoid;
+}
+
+.item img{
+    width: 100%;
 }
 
 ::-webkit-input-placeholder {
@@ -245,10 +232,6 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 @media (max-width: 860px) {
     .pattern-center-blank {
         padding-top: 75px;
-    }
-    .juzhong {
-        display: block;
-        line-height: 75px;
     }
 }
 
