--- a/css/galleries.css
+++ b/css/galleries.css
@@ -110,9 +110,25 @@ html {
     }
 }
 
-.waterfall {
-    column-count: 4;
-    column-gap: 1em;
+@media only screen and (max-width: 600px) {
+    .waterfall {
+        column-count: 1;
+        column-gap: 1em;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 860px) {
+    .waterfall {
+        column-count: 2;
+        column-gap: 1em;
+    }
+}
+
+@media only screen and (min-width: 860px) {
+    .waterfall {
+        column-count: 4;
+        column-gap: 1em;
+    }
 }
 
 .item {
